Bug 1890923 - Remove unused temporary variable. r=mac-reviewers,bradwerth

Differential Revision: https://phabricator.services.mozilla.com/D207234